--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cereal" version="1.0.0" targetFramework="native" />
   <package id="directxtk_uwp" version="2023.4.28.1" targetFramework="native" />
   <package id="ImGui.Docking" version="1.88.1" targetFramework="native" />
 </packages>
