--- a/ShaderProject.vcxproj.filters
+++ b/ShaderProject.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="func\KeyInput.h">
       <Filter>Func</Filter>
     </ClInclude>
+    <ClInclude Include="fanc\CerealIO.h">
+      <Filter>Func</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp">
